Changes in Caudium 1.5.1 since Caudium 1.4.1
---------------------------------------------
- Added randomization to cache and storage jobs to prevent surges.
    (Bill Welliver)
- We now store cache item sizes, which should reduce fd usage and
    improve startup times.
    (Bill Welliver)
- Removed a double read on cache items, which should improve performance.
    (Bill Welliver)
- Cache tuning to prevent runaway cache expiration.
    (Bill Welliver)
- Default maximum POST size is now 5MB for new virtual servers.
    (Bill Welliver)
- An error 413 is returned for requests crossing the maximum POST size,
    even though it may be interpreted as a "premature close".
    (Bill Welliver)
- Config interface variables pertaining to cache storage engine now use
    SQL instead of MySQL.
    (Bill Welliver)
- Storage.Methods.MySQL is now Storage.Methods.SQL in honor of its newly 
    found cross-databasiness, which includes support for SQLite.
    (Bill Welliver)
- User listing toggle in User Filesystem works more properly.
    (Bill Welliver)
- Fixes for authentication providers that don't support user listings
    (Bill Welliver)
- Added a "null" slow storage backend for cache.
    (Bill Welliver)
- Fix color selector for wizards.
    (Bill Welliver)
- Make running with Shuffler the default.
    (Bill Welliver)
- Rework the module add page to make it load faster and look better.
    (Bill Welliver)
- Reverting to Pike language prestate parser; disable use of "internal" 
    prestates.
    (Bill Welliver)
- CIF pages using the wizard form now sport a unique identifier in the request
  so that the page is still up to date, even with browsers that caches a lot.
   (Bertrand LUPART)
- The CIF can now show if the server is running with Shuffler or nbio.
   (Bertrand LUPART)
- Fixed a bug where empty variables passed in the URL would totally mess up the
  other variables and empty variables in the request id object.
   (Bertrand LUPART)