@@ -71,7 +71,7 @@ array(array(string | array(string))) arguments = ({
   ({"version", Getopt.NO_ARG, ({"--version"})}),
   ({"piketrace", Getopt.MAY_HAVE_ARG, ({ "--piketrace", "-t" })}),
   ({"help", Getopt.NO_ARG, ({"--help", "-?"})}),
-	({"shuffler", Getopt.NO_ARG, ({ "--shuffler", "--with-shuffler" })}),
+	({"pmod", Getopt.HAS_ARG, ({"--with-pike-module", "--pike-module", "--with-pmod", "--pmod", "-M"})}),
 });
 
 // loader options (with defaults)
@@ -852,9 +852,9 @@ int act_on_args()
         case "quiet":
           options->quiet=1;
           break;
-	case "shuffler":
-//	  command_line->DEFINES+=({"USE_SHUFFLER"});
-	  break;
+				case "pmod":
+					lib_locations += ({ m[1] });
+					break;
     }    
   }
   
